--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "http://cuteberry.github.io/blockchain-developer-bootcamp-final-project",
   "name": "blockchain-developer-bootcamp-final-project-ml",
   "version": "1.0.0",
   "license": "UNLICENSED",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "razzle start",
     "build": "razzle build --noninteractive "
   },
@@ -29,6 +32,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^4.5.2",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "2.2.1",
