--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,11 @@
 {
-  "homepage": "http://cuteberry.github.io/blockchain-developer-bootcamp-final-project",
+  "homepage": "/",
   "name": "blockchain-developer-bootcamp-final-project",
   "version": "1.0.0",
   "license": "UNLICENSED",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build/public",
     "start": "razzle start",
     "build": "razzle build --noninteractive "
   },
